# AdvSpeech

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ASR.ipynb  Fidelity_experiment.ipynb  Psycho-Acoustic.ipynb  README.md  _config.yml  acoustics.py  adv_runners.py  advspeech_v2.py  batch_syn.py  benchmark_pipeline.py  data_check.py  dev-environment.yml  environment.yml  experiment.ipynb  loss.py  main.py  optimization.ipynb  output_log_with_metrics.txt  pyproject.toml  requirements.txt  syn_runner.py  util.py
Metrics/: EffectivenessMetric.py  FidelityMetrics.py
Psychoacoustics/: psyacloss_torch.py  psyacmodel_torch.py
_site/: index.html
audio_tokenizer/: __init__.py  factorized_vector_quantize.py  feat_encoder.py  samper.py  semantic_token_spark.py  vocos.py
audios/en_sample/: 5694_64025_000004_000009.normalized.txt  config.yaml
configs/: experiment_config.yaml
dataset/: base_audio_dataset.py  data_check.py  transformed_audio_dataset.py
docs/: index.html
docs/audios/cn_sample/: config.yaml
docs/audios/en_sample/: 5694_64025_000004_000009.normalized.txt
results/: NISQA_results.csv  NISQA_results_advspeech.csv
s3tokenizer/: __init__.py  cli.py  model.py  model_v2.py  utils.py
sample_web/: .gitignore  _config.yml  index.html  jekyll-cayman-theme.gemspec
sample_web/_includes/: page-header.html
sample_web/_posts/: 2016-02-12-sample-content.markdown
sample_web/audios/V2_cosyvoice/: 2277_1.normalized.txt
synthesis/: antifake_syn.sh  cosyvoice.py  cosyvoice_syn_batch.ipynb  openvoice_syn.ipynb  synthesizer.py  xTTSv2_syn.ipynb
(+4 files in other folders)
